# buddy-mlir

./: CMakeLists.txt
examples/: TTIR_E2E_OPTIMIZATION_ROADMAP.md  TTIR_E2E_RUN_GUIDE.md
examples/BuddyDeepSeekR1/: .gitignore  buddy-deepseek-r1-lower-ttir.py  deepseek_chat_prepare.py  deepseek_chat_run.py  deepseek_ttir_e2e_prepare.py  deepseek_ttrt_run_compare.py  run_deepseek_p150_chat.sh  run_deepseek_p150_e2e.sh
examples/BuddyLeNet/: .gitignore  LENET_TTIR_E2E_GUIDE.md  README.md  buddy-lenet-lower-ttir.py  env_buddy_ttir.sh  lenet_ttir_e2e_prepare.py  lenet_ttrt_run_compare.py  pytorch-lenet-inference.py  pytorch-lenet-train.py
examples/BuddyLlama31-8B/: .gitignore  README.md  _env.sh  buddy-llama31-lower-ttir.py  llama31_chat_prepare.py  llama31_chat_run.py  llama31_ttir_e2e_prepare.py  llama31_ttrt_run_subgraph.py  run_llama31_p150_chat.sh
frontend/Python/: frontend.py
frontend/Python/graph/: graph.py  operation.py  ttir_import.py
frontend/Python/graph/transform/: __init__.py
frontend/Python/ops/: ttir.py  ttir_llm.py
models/: CMakeLists.txt
models/llama31_tt/: CMakeLists.txt  run_llama31_tt_chat.sh
models/llama_ttnn_direct/: CMakeLists.txt  README.md  __init__.py
models/llama_ttnn_direct/buddy_ttnn_direct/: __init__.py  cli.py  profile_template.py  runtime_environment.py  smoke_attention_layer.py  smoke_attention_primitive.py  smoke_decode_shell.py  smoke_mlp.py  smoke_single_layer_decode.py  validation.py
models/llama_ttnn_direct/buddy_ttnn_direct/codegen/: __init__.py  artifacts.py  config_diff.py  config_emit.py  package.py  parameters.py  program.py  python_ttnn.py  ttnn_tensorizer.py
models/llama_ttnn_direct/buddy_ttnn_direct/configs/: generic_llama_decode.json  p150a_llama31_8b_b32.json
models/llama_ttnn_direct/buddy_ttnn_direct/custom_ops/: README.md
models/llama_ttnn_direct/buddy_ttnn_direct/reference/: official_llama31_decode_template.json  official_p150a_llama31_8b_config_seed.json
models/llama_ttnn_direct/buddy_ttnn_direct/search/: __init__.py  decode_step_autotune.py  report.py  runner.py  space.py
models/llama_ttnn_direct/buddy_ttnn_direct/search/spaces/: decode_step_minimal.json  lm_head_minimal.json
models/llama_ttnn_direct/buddy_ttnn_direct/semantic/: __init__.py  dump.py  graph.py  importer_hf_llama.py  validate.py
models/llama_ttnn_direct/buddy_ttnn_direct/templates/: __init__.py  attention_decode.py  diff.py  lm_head.py  mlp_decode.py  registry.py  ttnn_ops.py
models/llama_ttnn_direct/buddy_ttnn_direct/tests/: __init__.py  test_attention_decode_template.py  test_build_program.py  test_codegen_skeleton.py  test_config_diff.py  test_config_emit.py  test_importer_hf_llama.py  test_package_program.py  test_parameters.py  test_plan_diff.py  test_prepare_artifacts.py  test_profile_template.py  test_runtime_environment.py  test_search.py  test_smoke_attention_layer.py  test_smoke_attention_primitive.py  test_smoke_decode_shell.py  test_smoke_mlp.py  test_smoke_single_layer_decode.py  test_template_registry.py  test_ttnn_ops_wrappers.py  test_validate_direct.py
tests/Python/dialects/: test_lenet_ttir_op_inventory.py  test_lenet_ttir_ops_coverage.py  test_ttir_ops_registry.py
